--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,49 @@
-# Groq API Key (Get from https://console.groq.com)
+# ==========================================================
+# Groq API Key (Get free from https://console.groq.com)
+# ==========================================================
 GROQ_API_KEY=gsk_your_api_key_here
 
-# Google Credentials (Service Account JSON files)
-GOOGLE_SHEETS_CREDS_FILE=./credentials/sheets_creds.json
-GOOGLE_CALENDAR_CREDS_FILE=./credentials/calendar_creds.json
 
-# Spreadsheet Configuration
+# ==========================================================
+# Google Service Account Credentials
+# Convert your JSON files to Base64 before adding here.
+# Example (Linux/Mac):
+#   base64 -w 0 sheets_credentials.json
+# Example (Windows PowerShell):
+#   [Convert]::ToBase64String([IO.File]::ReadAllBytes("sheets_credentials.json"))
+# ==========================================================
+GOOGLE_SHEETS_CREDS_BASE64=
+GOOGLE_CALENDAR_CREDS_BASE64=
+
+
+# ==========================================================
+# Google Spreadsheet Configuration
+# SPREADSHEET_NAME must match EXACTLY as shown in Google Sheets.
+# CALENDAR_ID = service_account_email from the JSON credentials
+# ==========================================================
 SPREADSHEET_NAME=Lead Tracker
 CALENDAR_ID=your-service-account@your-project.iam.gserviceaccount.com
 TIMEZONE=Asia/Kolkata
 
+
+# ==========================================================
 # Discord Webhook (Optional)
-DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your_webhook_url
+# Create from Discord → Server Settings → Integrations → Webhooks
+# ==========================================================
+DISCORD_WEBHOOK_URL=
 
-# Gmail Configuration (Optional)
+
+# ==========================================================
+# Gmail SMTP (Optional – used for email notifications)
+# Generate App Password from Google Account → Security → App Passwords
+# ==========================================================
 GMAIL_USER=your-email@gmail.com
-GMAIL_APP_PASSWORD=your_16_char_app_password
+GMAIL_APP_PASSWORD=your_16_character_app_password
 
+
+# ==========================================================
 # Server Configuration
+# Render dynamically assigns PORT; keep this as 5000 for local dev.
+# ==========================================================
 PORT=5000
 FLASK_ENV=production
